k8s/static/ingress.yaml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: fastapi-app-ingress
  annotations:
    # this annotation tells the ingress controller to use the nginx ingress controller
    kubernetes.io/ingress.class: nginx
    nginx.ingress.kubernetes.io/ssl-redirect: "false"
spec:
  rules:
    - host: fastapi-app.com
      http:
        paths:
          - path: /
            pathType: Prefix
            backend:
              service:
                # this is the name of the service defined in service.yaml
                name: fastapi-app-service
                port:
                  number: 80
